--- a/infra/Pulumi.e2e.yaml
+++ b/infra/Pulumi.e2e.yaml
@@ -1,18 +1,18 @@
 config:
+  aws:region: us-east-2
   aws:skipCredentialsValidation: "true"
   aws:skipRequestingAccountId: "true"
-  aws:region: "us-east-2"
-  opni:infra:
-    namePrefix: opni-e2e-test
+  opni:cloud: aws
+  opni:cluster:
     nodeGroupDesiredSize: 2
     nodeGroupMaxSize: 3
     nodeGroupMinSize: 2
     nodeInstanceType: t3.xlarge
-    zoneID:
-      secure: AAABAE4hUcgXi3jNfF89nz16fwg/9VMTur5HnecweZTWA51gG9SJqz12iZjreg==
-  opni:test:
-    cloud: aws
-    imageRepo: rancher/opni
-    imageTag: latest
+  opni:imageRepo: rancher/opni
+  opni:imageTag: latest
+  opni:namePrefix: opni-e2e-test
+  opni:useLocalCharts: false
+  opni:zoneID:
+    secure: AAABAIKQr3wm8wbbcoO98Di6cpXArwwBwU6h3A+wiq8juuezY+5Xjz+xE6dTNg==
   pulumi:disable-default-providers:
     - kubernetes
