--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,7 @@ steps:
     commands:
       - apk add --no-cache curl
       - curl -sL https://dl.dagger.io/dagger/install.sh | sh
+      - bin/dagger version
       - bin/dagger do build
     volumes: &volumes
       - name: docker
