Add rancher model

--- a/packages/opni/opni/charts/templates/ai/opnicluster.yaml
+++ b/packages/opni/opni/charts/templates/ai/opnicluster.yaml
@@ -16,6 +16,7 @@ spec:
       enabled: true
       pretrainedModels:
       - name: control-plane
+      - name: rancher
     metrics:
       enabled: {{ .Values.monitoring.enabled }}
       prometheusEndpoint: https://cortex-query-frontend:8080
