Update insecure flags

--- a/packages/opni-agent/opni-agent/charts/templates/job.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/job.yaml
@@ -35,7 +35,8 @@ spec:
         - --gateway-url={{ .Values.address }}
         - --namespace={{ include "opni-agent.namespace" . }}
         {{- if .Values.logging.insecure }}
-        - --insecure
+        - --trust-strategy=insecure
+        - --confirm-insecure
         {{- end }}
         {{- if .Values.logging.disableOpensearchTLSVerify }}
         - --opensearch-insecure
