--- a/packages/opni-agent/opni-agent/templates/crd-template/Chart.yaml
+++ b/packages/opni-agent/opni-agent/templates/crd-template/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-version: 0.6.0
+version: 0.5.4-rc1
 description: Installs the CRDs for Opni.
 name: opni-agent-crd
 type: application
