--- a/packages/opni/opni/charts/templates/deployment.yaml
+++ b/packages/opni/opni/charts/templates/deployment.yaml
@@ -75,6 +75,9 @@ spec:
               readOnly: true
             - mountPath: /host-etc/os-release
               name: host-os-release
+            {{- if .Values.volumeMounts }}
+            {{- toYaml .Values.volumeMounts | nindent 12 }}
+            {{- end }}
         - name: kube-rbac-proxy
           image: gcr.io/kubebuilder/kube-rbac-proxy:v0.5.0
           args:
@@ -95,6 +98,9 @@ spec:
             path: /etc/os-release
             type: File
           name: host-os-release
+        {{- if .Values.volumes }}
+        {{- toYaml .Values.volumes | nindent 8 }}
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
