--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
       # DAGGER_CACHE_TO: type=registry,mode=max,ref=rancher/opni-buildkit-cache
     commands:
       - apk add --no-cache curl
-      - curl -sL https://dl.dagger.io/dagger/install.sh | sh
+      - curl -sL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.2.19 sh
       - bin/dagger version
       - bin/dagger do build
     volumes: &volumes
