--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -20,6 +20,7 @@ logging:
   enabled: false
   insecure: false
   disableOpensearchTLSVerify: false
+  disableBootstrap: false
   provider: rke
   jobTTL: 0
 
