--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -497,10 +497,6 @@ spec:
                       roleAttributeStrict:
                         type: boolean
                       scopes:
-                        default:
-                        - openid
-                        - profile
-                        - email
                         items:
                           type: string
                         type: array
@@ -1369,6 +1365,36 @@ spec:
               image:
                 type: string
               imagePullPolicy:
+                type: string
+              loadBalancer:
+                properties:
+                  hostname:
+                    type: string
+                  ip:
+                    type: string
+                  ports:
+                    items:
+                      properties:
+                        error:
+                          maxLength: 316
+                          pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                          type: string
+                        port:
+                          format: int32
+                          type: integer
+                        protocol:
+                          default: TCP
+                          type: string
+                      required:
+                      - port
+                      - protocol
+                      type: object
+                    type: array
+                    x-kubernetes-list-type: atomic
+                type: object
+              ready:
+                type: boolean
+              serviceName:
                 type: string
             type: object
         type: object
