--- a/packages/opni/opni/charts/crds/crds.yaml
+++ b/packages/opni/opni/charts/crds/crds.yaml
@@ -17106,10 +17106,6 @@ spec:
                       roleAttributeStrict:
                         type: boolean
                       scopes:
-                        default:
-                        - openid
-                        - profile
-                        - email
                         items:
                           type: string
                         type: array
@@ -17978,6 +17974,36 @@ spec:
               image:
                 type: string
               imagePullPolicy:
+                type: string
+              loadBalancer:
+                properties:
+                  hostname:
+                    type: string
+                  ip:
+                    type: string
+                  ports:
+                    items:
+                      properties:
+                        error:
+                          maxLength: 316
+                          pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                          type: string
+                        port:
+                          format: int32
+                          type: integer
+                        protocol:
+                          default: TCP
+                          type: string
+                      required:
+                      - port
+                      - protocol
+                      type: object
+                    type: array
+                    x-kubernetes-list-type: atomic
+                type: object
+              ready:
+                type: boolean
+              serviceName:
                 type: string
             type: object
         type: object
@@ -29572,6 +29598,9 @@ spec:
                             maxSkew:
                               format: int32
                               type: integer
+                            minDomains:
+                              format: int32
+                              type: integer
                             topologyKey:
                               type: string
                             whenUnsatisfiable:
@@ -33096,6 +33125,9 @@ spec:
                                   type: object
                               type: object
                             maxSkew:
+                              format: int32
+                              type: integer
+                            minDomains:
                               format: int32
                               type: integer
                             topologyKey:
@@ -36627,6 +36659,9 @@ spec:
                             maxSkew:
                               format: int32
                               type: integer
+                            minDomains:
+                              format: int32
+                              type: integer
                             topologyKey:
                               type: string
                             whenUnsatisfiable:
@@ -40151,6 +40186,9 @@ spec:
                                   type: object
                               type: object
                             maxSkew:
+                              format: int32
+                              type: integer
+                            minDomains:
                               format: int32
                               type: integer
                             topologyKey:
