Update to ragu v1 beta
add aiops/apis

fix erroneous controller-gen mage target failures

Update proto file

Update requirements.txt file to include betterproto

Modify setup.py and requirements.txt file

add dagger action and ci step for uploading pypi packages

Update opensearch updating service to be compatible with protobuf

Include proto source file

Address PR comments

Update files

Update opensearch updating service

Update opensearch updating service to use pypi library for protobuf

Update opensearch updating service

Update ci.cue file

Remove commented line

Update requirements.txt file to include opni-aiops-apis library

write pypi package to aiops/apis/dist on build

Modified changes for pypi library

Update setup.py script to point to opni_proto

aiops dagger action bugfixes

Update dependency requirements

Edit requirements.txt

Update cue file

Update setup.py script for v0.5.4 pypi package

Remove extra __init__.py files

Update files for drone and dagger versioning

Update ci.cue file

Update charts to add branding and local install

Update kmatch to fix logic

Update go.sum file

Reset changes made to up.sh

Add newline to end of up.sh file

--- a/packages/opni/opni/charts/questions.yaml
+++ b/packages/opni/opni/charts/questions.yaml
@@ -320,6 +320,23 @@ questions:
         - LoadBalancer
         - NodePort
         - ClusterIP
+    - variable: logging.local.enabled
+      type: boolean
+      default: false
+      label: "Ship logs from local cluster to Opni Logging"
+    - variable: logging.local.provider
+      show_if: "logging.local.enabled=true"
+      type: enum
+      default: "generic"
+      label: "Kubernetes Provider"
+      options:
+      - eks
+      - aks
+      - gce
+      - rke
+      - rke2
+      - k3s
+      - generic
   - variable: ai.enabled
     type: boolean
     default: "false"
