--- a/pkg/test/testdata/slo/multiSpecs.yaml
+++ b/pkg/test/testdata/slo/multiSpecs.yaml
@@ -19,13 +19,13 @@
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service"}[5m]))
+                query: sum(rate(up{job="foo-service", up=1}[{{.window}}])) 
                 queryType: promql
           total:
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service"}[5m]))
+                query: sum(rate(up{job="foo-service"}[{{.window}}]))
                 queryType: promql
     budgetingMethod: 30d
     timeWindow: []
@@ -55,13 +55,13 @@
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service2"}[5m]))
+                query: sum(rate(up{job="foo-service2", up=1}[{{.window}}]))
                 queryType : promql
           total:
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service2"}[5m]))
+                query: sum(rate(up{job="foo-service2"}[{{.window}}]))
                 queryType : promql
     budgetingMethod: 30d
     timeWindow: []
@@ -91,13 +91,13 @@
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service"}[5m]))
+                query: sum(rate(up{job="foo-service", up=1}[{{.window}}]))
                 queryType : promql
           total:
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service"}[5m]))
+                query: sum(rate(up{job="foo-service"}[{{.window}}]))
                 queryType : promql
     budgetingMethod: 30d
     timeWindow: []
@@ -127,13 +127,13 @@
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service2"}[5m]))
+                query: sum(rate(up{job="foo-service2", up=1}[{{.window}}]))
                 queryType : promql
           total:
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate({job="foo-service2"}[5m]))
+                query: sum(rate(up{job="foo-service2"}[{{.window}}]))
                 queryType : promql
     budgetingMethod: 30d
     timeWindow: []
