--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -24,9 +24,9 @@ logging:
   provider: rke
   jobTTL: 0
 
-address: https://localhost:8080
-token: ""
-pin: ""
+events:
+  enabled: true
+  resources: {}
 
 podAnnotations: {}
 
@@ -47,8 +47,7 @@ service:
   type: ClusterIP
   port: 80
 
-resources:
-  {}
+resources: {}
   # requests:
   #   cpu: 500m
   #   memory: 512Mi
