--- a/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
@@ -1,5 +1,4 @@
 {{- $versionTag := printf "v%s" .Chart.AppVersion }}
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -44,6 +43,9 @@ spec:
           {{- end }}
           {{- if .Values.logging.enabled }}
             - --logging
+          {{- if .Values.events.enabled }}
+            - --events
+          {{- end }}
           {{- end }}
           ports:
             - name: http
@@ -121,50 +123,3 @@ spec:
             defaultMode: 420
             secretName: webhook-server-cert
     {{- end }}
----
-{{- if (and .Values.logging.enabled .Values.events.enabled) }}
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: opni-events
-  namespace: opni-system
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: opni-events
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: opni-events
-    spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: opni-agent
-      containers:
-      - args:
-        - events
-        command:
-        - opni
-        image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default $versionTag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        name: gateway
-        resources:
-            {{- toYaml .Values.events.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
-{{- end }}
