wait for opni service to obtain a load balancer in chart post-install hook

--- a/packages/opni/opni/charts/templates/gateway-post-install.yaml
+++ b/packages/opni/opni/charts/templates/gateway-post-install.yaml
@@ -30,5 +30,6 @@ spec:
         - "--namespace={{ include "opni.namespace" . }}"
         - --version=v1
         - --resource=services
+        - --jsonpath={.status.loadBalancer.ingress}
         - opni-monitoring
 {{- end }}
