--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -1362,6 +1362,36 @@ spec:
             type: object
           status:
             properties:
+              endpoints:
+                items:
+                  properties:
+                    hostname:
+                      type: string
+                    ip:
+                      type: string
+                    nodeName:
+                      type: string
+                    targetRef:
+                      properties:
+                        apiVersion:
+                          type: string
+                        fieldPath:
+                          type: string
+                        kind:
+                          type: string
+                        name:
+                          type: string
+                        namespace:
+                          type: string
+                        resourceVersion:
+                          type: string
+                        uid:
+                          type: string
+                      type: object
+                  required:
+                  - ip
+                  type: object
+                type: array
               image:
                 type: string
               imagePullPolicy:
