--- a/packages/opni/opni/charts/templates/gateway-post-install.yaml
+++ b/packages/opni/opni/charts/templates/gateway-post-install.yaml
@@ -28,8 +28,10 @@ spec:
         - hooks
         - wait-for-resource
         - "--namespace={{ include "opni.namespace" . }}"
-        - --version=v1
-        - --resource=services
-        - --jsonpath={.status.loadBalancer.ingress}
-        - opni-monitoring
+        - --version=v1beta2
+        - --group=opni.io
+        - --resource=gateways
+        - --jsonpath={.status.endpoints}
+        - --jsonpath={.status.loadBalancer}
+        - opni-gateway
 {{- end }}
