Allow agent to be in any namespace

--- a/config/crd/bases/opni.io_logadapters.yaml
+++ b/config/crd/bases/opni.io_logadapters.yaml
@@ -7092,6 +7092,8 @@ spec:
                 type: object
               containerLogDir:
                 type: string
+              controlNamespace:
+                type: string
               eks:
                 type: object
               fluentConfig:
