--- a/packages/opni/opni/charts/crds/crds.yaml
+++ b/packages/opni/opni/charts/crds/crds.yaml
@@ -33230,6 +33230,8 @@ spec:
                 type: object
               containerLogDir:
                 type: string
+              controlNamespace:
+                type: string
               eks:
                 type: object
               fluentConfig:
