add dagger action and ci step for uploading pypi packages
Update opensearch updating service to be compatible with protobuf

Include proto source file

Address PR comments

Update files

Update opensearch updating service

Update opensearch updating service to use pypi library for protobuf

Update opensearch updating service

Update ci.cue file

Remove commented line

Update requirements.txt file to include opni-aiops-apis library

--- a/.drone.yml
+++ b/.drone.yml
@@ -207,6 +207,24 @@ steps:
         - drone-publish.rancher.io
       cron:
         - e2e-nightly
+  - name: publish-pypi-packages
+    image: docker
+    environment:
+      <<: *dagger_env
+      TWINE_PASSWORD:
+        from_secret: twine_password
+    commands:
+      - bin/dagger do pypi upload
+    volumes: *volumes
+    when:
+      event:
+        - tag
+      instance:
+        - drone-publish.rancher.io
+      refs:
+        - refs/heads/main
+        - refs/heads/release
+        - refs/tags/*
 volumes:
   - name: docker
     host:
