--- a/.gitignore
+++ b/.gitignore
@@ -42,19 +42,6 @@ web/dist/
 /charts/
 index.yaml
 
-# terraform
-**/.terraform/*
-*.tfstate
-*.tfstate.*
-crash.log
-crash.*.log
-*.tfvars
-*.tfvars.json
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-.terraformrc
-terraform.rc
+# kubeconfigs
 **/kubeconfig.yaml
 **/kubeconfig.json
