Fix SLO pkg tests

--- a/pkg/test/testdata/slo/multiAlertSLO.yaml
+++ b/pkg/test/testdata/slo/multiAlertSLO.yaml
@@ -5,7 +5,6 @@
     labels: {}
     annotations: {}
   spec:
-    description: Some SLO
     service: foo-service
     indicator:
       metadata:
@@ -19,18 +18,18 @@
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate(up{job="foo-service", up=1}[{{.window}}]))
+                query: (sum(rate(up{job="foo-service"} == 1)))[{{.window}}]
                 queryType: promql
           total:
             metricSource:
               type: prometheus
               spec:
-                query: sum(rate(up{job="foo-service"}[{{.window}}]))
+                query: (sum(rate(up{job="foo-service"})))[{{.window}}]
                 queryType: promql
     budgetingMethod: 30d
     timeWindow: []
     objectives:
-    - displayName: foo-name-target0
+    - displayName: foo-name-target
       target: 99.99
       timeSliceWindow: 5m
     alertPolicies:
