conditionally enable loadbalancer status check based on service type

--- a/packages/opni/opni/charts/templates/gateway-post-install.yaml
+++ b/packages/opni/opni/charts/templates/gateway-post-install.yaml
@@ -32,6 +32,8 @@ spec:
         - --group=opni.io
         - --resource=gateways
         - --jsonpath={.status.endpoints}
+{{- if eq .Values.gateway.serviceType "LoadBalancer" }}
         - --jsonpath={.status.loadBalancer}
+{{- end }}
         - opni-gateway
 {{- end }}
