--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
       # DAGGER_CACHE_TO: type=registry,mode=max,ref=rancher/opni-buildkit-cache
     commands:
       - apk add --no-cache curl
-      - curl -sL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.2.19 sh
+      - curl -sL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.2.21 sh
       - bin/dagger version
       - bin/dagger do build
     volumes: &volumes
@@ -207,14 +207,14 @@ steps:
         - drone-publish.rancher.io
       cron:
         - e2e-nightly
-  - name: publish-pypi-packages
+  - name: publish-aiops
     image: docker
     environment:
       <<: *dagger_env
       TWINE_PASSWORD:
         from_secret: twine_password
     commands:
-      - bin/dagger do pypi upload
+      - bin/dagger do aiops
     volumes: *volumes
     when:
       event:
