Modify drone file to account for updated tasks in ci.cue file

--- a/.drone.yml
+++ b/.drone.yml
@@ -211,6 +211,10 @@ steps:
     image: docker
     environment:
       <<: *dagger_env
+      DOCKER_USERNAME:
+        from_secret: docker_username
+      DOCKER_PASSWORD:
+        from_secret: docker_password
       TWINE_PASSWORD:
         from_secret: twine_password
     commands:
