Update events shipper UI

--- a/packages/opni-agent/opni-agent/charts/questions.yaml
+++ b/packages/opni-agent/opni-agent/charts/questions.yaml
@@ -54,5 +54,8 @@ questions:
     - eks
     - aks
     - gke
+  - variable: events.enabled
+    label: Enable event collection
+    type: boolean
 
 
