--- a/config/crd/bases/opni.io_bootstraptokens.yaml
+++ b/config/crd/bases/opni.io_bootstraptokens.yaml
@@ -48,6 +48,8 @@ spec:
                   leaseID:
                     format: int64
                     type: integer
+                  resourceVersion:
+                    type: string
                   ttl:
                     format: int64
                     type: integer
