Tidy alerting naming conventions & pacakges

--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -1066,6 +1066,7 @@ spec:
                       type: object
                     type: array
                   alertingPort:
+                    default: 9093
                     type: integer
                   serviceType:
                     default: ClusterIP
