Update publish-aiops task in .drone.yml file to have DRONE_TAG environment variable

--- a/.drone.yml
+++ b/.drone.yml
@@ -217,6 +217,7 @@ steps:
         from_secret: docker_password
       TWINE_PASSWORD:
         from_secret: twine_password
+      TAG: ${DRONE_TAG}
     commands:
       - bin/dagger do aiops
     volumes: *volumes
