--- a/pkg/test/testdata/cortex/config.yaml
+++ b/pkg/test/testdata/cortex/config.yaml
@@ -7,7 +7,7 @@ tenant_federation:
   enabled: true
 
 server:
-  log_level: error
+  log_level: warn
   http_listen_port: {{ .HttpListenPort }}
   grpc_listen_port: {{ .GrpcListenPort }}
   http_tls_config: &tls_server_config
@@ -55,7 +55,7 @@ ingester:
   lifecycler:
     # The address to advertise for this ingester.  Will be autodiscovered by
     # looking up address on eth0 or en0; can be specified if this fails.
-    address: 127.0.0.1
+    address: localhost
 
     # We want to start immediately and flush on shutdown.
     join_after: 0
@@ -66,7 +66,10 @@ ingester:
     # Use an in memory ring store, so we don't need to launch a Consul.
     ring:
       kvstore:
-        store: inmemory
+        store: etcd
+        etcd:
+          endpoints:
+            - "localhost:{{ .EtcdPort }}"
       replication_factor: 1
 
 storage:
@@ -77,16 +80,21 @@ blocks_storage:
     dir: "{{ .StorageDir }}/tsdb"
   bucket_store:
     sync_dir: "{{ .StorageDir }}/tsdb-sync"
+    sync_interval: 10s
+    bucket_index:
+      enabled: true
   backend: filesystem
   filesystem:
     dir: "{{ .StorageDir }}/blocks"
 
 compactor:
-  data_dir: "{{ .StorageDir }}/compactor"
+  sharding_enabled: false
   sharding_ring:
     kvstore:
-      store: inmemory
-
+      store: etcd
+      etcd:
+        endpoints:
+          - "localhost:{{ .EtcdPort }}"
 ruler_storage:
   backend: filesystem
   filesystem:
