--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -1068,6 +1068,8 @@ spec:
                   alertingPort:
                     default: 9093
                     type: integer
+                  enabled:
+                    type: boolean
                   serviceType:
                     default: ClusterIP
                     type: string
