Update job permissions in cluster role

--- a/packages/opni/opni/charts/templates/rbac.yaml
+++ b/packages/opni/opni/charts/templates/rbac.yaml
@@ -213,7 +213,6 @@ rules:
   - batch
   resources:
   - cronjobs
-  - jobs
   verbs:
   - get
   - list
@@ -229,6 +228,7 @@ rules:
   - patch
   - update
   - watch
+  - delete
 - apiGroups:
   - cert-manager.io
   resources:
