--- a/packages/opni-agent/opni-agent/charts/crds/crds.yaml
+++ b/packages/opni-agent/opni-agent/charts/crds/crds.yaml
@@ -11353,6 +11353,8 @@ spec:
                 type: string
               defaultRepo:
                 type: string
+              enableTracing:
+                type: boolean
               image:
                 type: string
               imagePullPolicy:
