--- a/packages/opni-agent/opni-agent/charts/templates/job.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/job.yaml
@@ -41,6 +41,9 @@ spec:
         {{- if .Values.logging.disableOpensearchTLSVerify }}
         - --opensearch-insecure
         {{- end }}
+        {{- if .Values.logging.tracing }}
+        - --tracing
+        {{- end }}
       restartPolicy: Never
   backoffLimit: 3
 {{- end }}
