--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -18,6 +18,7 @@ metrics:
 logging:
   enabled: false
   insecure: false
+  tracing: false
   disableOpensearchTLSVerify: false
   disableBootstrap: false
   provider: rke
