--- a/config/crd/bases/opni.io_datapreppers.yaml
+++ b/config/crd/bases/opni.io_datapreppers.yaml
@@ -35,6 +35,8 @@ spec:
                 type: string
               defaultRepo:
                 type: string
+              enableTracing:
+                type: boolean
               image:
                 type: string
               imagePullPolicy:
