--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
 - grafana/grafana.opni.io_grafananotificationchannels.yaml
 - grafana/grafana.opni.io_grafanas.yaml
 - bases/opni.io_opniclusters.yaml
+- bases/opni.io_opniopensearches.yaml
 - bases/opni.io_logadapters.yaml
 - bases/demo.opni.io_opnidemoes.yaml
 - bases/opni.io_pretrainedmodels.yaml
