--- a/packages/opni/opni/charts/crds/crds.yaml
+++ b/packages/opni/opni/charts/crds/crds.yaml
@@ -17689,9 +17689,12 @@ spec:
                           type: object
                       type: object
                     type: array
-                  alertingPort:
-                    default: 9093
+                  apiPort:
+                    default: 9094
                     type: integer
+                  configName:
+                    default: alertmanager-config
+                    type: string
                   enabled:
                     type: boolean
                   serviceType:
@@ -17700,6 +17703,9 @@ spec:
                   storage:
                     default: 500Mi
                     type: string
+                  webPort:
+                    default: 9093
+                    type: integer
                 type: object
               auth:
                 properties:
