Fix agent rule sync, add agent pprof config option

--- a/packages/opni-agent/opni-agent/charts/templates/agent-config.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/agent-config.yaml
@@ -31,4 +31,10 @@ stringData:
         token: {{ .Values.token }}
         pins: [{{ .Values.pin }}]
         {{- end }}
+      {{- if .Values.logLevel }}
+      logLevel: {{ .Values.logLevel }}
+      {{- end }}
+      {{- if .Values.profiling }}
+      profiling: {{ .Values.profiling }}
+      {{- end }}
 {{- end }}
